# beets-alternatives

./: .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  DEVELOPING.md  LICENSE  Makefile  README.md  pyproject.toml  renovate.json  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yaml  release.yaml
beetsplug/: alternatives.py
dev/: get_release_notes.py
test/: AGENTS.md  __init__.py  cli_test.py  conftest.py  helper.py
